// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jest snapshot тесты на компонент CandidateCard Кандидат c issue на дату изменения статуса 1`] = `
<div
  className="BoardCard CandidateCard"
>
  <a
    className="Link BoardCard-Link"
    href="/candidates/1/"
    target="_blank"
  >
    <div
      className="BoardCard-Row"
    >
      <div
        className="BoardCard-RowItem BoardCard-RowItem_isHeading"
      >
        <div
          className="CandidateName CandidateCard-Name"
        >
          <a
            className="Link Link_theme_black CandidateName-Name"
            href="/candidates/1/"
            target="_blank"
          >
            Ольга Козлова
          </a>
           
        </div>
      </div>
      <div
        className="BoardCard-RowItem"
      >
        <span
          className="Id Id_theme_ghost CandidateCard-Id"
        >
          CAN 
          1
        </span>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    >
      Статус изменён
       
      <span
        className="DisplayDate"
        title="23 апреля 2021, 20:42"
      >
        23 апреля 2021
      </span>
    </div>
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
  </a>
</div>
`;

exports[`Jest snapshot тесты на компонент CandidateCard Кандидат без логина 1`] = `
<div
  className="BoardCard CandidateCard"
>
  <a
    className="Link BoardCard-Link"
    href="/candidates/1/"
    target="_blank"
  >
    <div
      className="BoardCard-Row"
    >
      <div
        className="BoardCard-RowItem BoardCard-RowItem_isHeading"
      >
        <div
          className="CandidateName CandidateCard-Name"
        >
          <a
            className="Link Link_theme_black CandidateName-Name"
            href="/candidates/1/"
            target="_blank"
          >
            Ольга Козлова
          </a>
           
        </div>
      </div>
      <div
        className="BoardCard-RowItem"
      >
        <span
          className="Id Id_theme_ghost CandidateCard-Id"
        >
          CAN 
          1
        </span>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    >
      Статус изменён
       
      <span
        className="DisplayDate"
        title="13 сентября 2018, 13:26"
      >
        13 сентября 2018
      </span>
    </div>
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
  </a>
</div>
`;

exports[`Jest snapshot тесты на компонент CandidateCard Кандидат бывший сотрудник 1`] = `
<div
  className="BoardCard CandidateCard"
>
  <a
    className="Link BoardCard-Link"
    href="/candidates/1/"
    target="_blank"
  >
    <div
      className="BoardCard-Row"
    >
      <div
        className="BoardCard-RowItem BoardCard-RowItem_isHeading"
      >
        <div
          className="CandidateName CandidateCard-Name"
        >
          <a
            className="Link Link_theme_black CandidateName-Name"
            href="/candidates/1/"
            target="_blank"
          >
            Ольга Козлова
          </a>
           
          <span>
            <a
              className="Link StaffUser StaffUser_isLink StaffUser_isDismissed"
              href="https://staff.yandex-team.ru/olgakozlova"
              target="_blank"
            >
              <span
                className="StaffUser-First"
              >
                @
              </span>
              olgakozlova
            </a>
          </span>
        </div>
      </div>
      <div
        className="BoardCard-RowItem"
      >
        <span
          className="Id Id_theme_ghost CandidateCard-Id"
        >
          CAN 
          1
        </span>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    >
      Статус изменён
       
      <span
        className="DisplayDate"
        title="13 сентября 2018, 13:26"
      >
        13 сентября 2018
      </span>
    </div>
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
  </a>
</div>
`;

exports[`Jest snapshot тесты на компонент CandidateCard Кандидат действующий сотрудник 1`] = `
<div
  className="BoardCard CandidateCard"
>
  <a
    className="Link BoardCard-Link"
    href="/candidates/1/"
    target="_blank"
  >
    <div
      className="BoardCard-Row"
    >
      <div
        className="BoardCard-RowItem BoardCard-RowItem_isHeading"
      >
        <div
          className="CandidateName CandidateCard-Name"
        >
          <a
            className="Link Link_theme_black CandidateName-Name"
            href="/candidates/1/"
            target="_blank"
          >
            Ольга Козлова
          </a>
           
          <span>
            <a
              className="Link StaffUser StaffUser_isLink"
              href="https://staff.yandex-team.ru/olgakozlova"
              target="_blank"
            >
              <span
                className="StaffUser-First"
              >
                @
              </span>
              olgakozlova
            </a>
          </span>
        </div>
      </div>
      <div
        className="BoardCard-RowItem"
      >
        <span
          className="Id Id_theme_ghost CandidateCard-Id"
        >
          CAN 
          1
        </span>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    >
      Статус изменён
       
      <span
        className="DisplayDate"
        title="13 сентября 2018, 13:26"
      >
        13 сентября 2018
      </span>
    </div>
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
  </a>
</div>
`;

exports[`Jest snapshot тесты на компонент CandidateCard Кандидат с городами < 2 1`] = `
<div
  className="BoardCard CandidateCard"
>
  <a
    className="Link BoardCard-Link"
    href="/candidates/1/"
    target="_blank"
  >
    <div
      className="BoardCard-Row"
    >
      <div
        className="BoardCard-RowItem BoardCard-RowItem_isHeading"
      >
        <div
          className="CandidateName CandidateCard-Name"
        >
          <a
            className="Link Link_theme_black CandidateName-Name"
            href="/candidates/1/"
            target="_blank"
          >
            Ольга Козлова
          </a>
           
        </div>
      </div>
      <div
        className="BoardCard-RowItem"
      >
        <span
          className="Id Id_theme_ghost CandidateCard-Id"
        >
          CAN 
          1
        </span>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    >
      Статус изменён
       
      <span
        className="DisplayDate"
        title="13 сентября 2018, 13:26"
      >
        13 сентября 2018
      </span>
    </div>
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    >
      <div
        className="ListShorter CandidateCard-Cities"
      >
        <div
          className="ListShorter-List ListShorter-List_size_m"
        >
          <span
            className="ListShorter-ListItem"
          >
            Минск
          </span>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Jest snapshot тесты на компонент CandidateCard Кандидат с городами >= 2 1`] = `
<div
  className="BoardCard CandidateCard"
>
  <a
    className="Link BoardCard-Link"
    href="/candidates/1/"
    target="_blank"
  >
    <div
      className="BoardCard-Row"
    >
      <div
        className="BoardCard-RowItem BoardCard-RowItem_isHeading"
      >
        <div
          className="CandidateName CandidateCard-Name"
        >
          <a
            className="Link Link_theme_black CandidateName-Name"
            href="/candidates/1/"
            target="_blank"
          >
            Ольга Козлова
          </a>
           
        </div>
      </div>
      <div
        className="BoardCard-RowItem"
      >
        <span
          className="Id Id_theme_ghost CandidateCard-Id"
        >
          CAN 
          1
        </span>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    >
      Статус изменён
       
      <span
        className="DisplayDate"
        title="23 апреля 2021, 20:42"
      >
        23 апреля 2021
      </span>
    </div>
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    >
      <div
        className="ListShorter CandidateCard-Cities"
      >
        <div
          className="ListShorter-List ListShorter-List_size_m"
        >
          <span
            className="ListShorter-ListItem"
          >
            Минск
          </span>
          <span
            className="ListShorter-Hidden ListShorter-Hidden_placeMoreOnNewLine"
          >
            <span
              className="ListShorter-ListMore"
              title="Брест"
            >
              ещё +1
            </span>
          </span>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Jest snapshot тесты на компонент CandidateCard Кандидат с профессиями < 2 1`] = `
<div
  className="BoardCard CandidateCard"
>
  <a
    className="Link BoardCard-Link"
    href="/candidates/1/"
    target="_blank"
  >
    <div
      className="BoardCard-Row"
    >
      <div
        className="BoardCard-RowItem BoardCard-RowItem_isHeading"
      >
        <div
          className="CandidateName CandidateCard-Name"
        >
          <a
            className="Link Link_theme_black CandidateName-Name"
            href="/candidates/1/"
            target="_blank"
          >
            Ольга Козлова
          </a>
           
        </div>
      </div>
      <div
        className="BoardCard-RowItem"
      >
        <span
          className="Id Id_theme_ghost CandidateCard-Id"
        >
          CAN 
          1
        </span>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    >
      Статус изменён
       
      <span
        className="DisplayDate"
        title="13 сентября 2018, 13:26"
      >
        13 сентября 2018
      </span>
    </div>
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    >
      <div
        className="ListShorter CandidateCard-Professions"
      >
        <div
          className="ListShorter-List ListShorter-List_size_m"
        >
          <span
            className="ListShorter-ListItem"
          >
            Разработчик бекэнда
          </span>
        </div>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    />
  </a>
</div>
`;

exports[`Jest snapshot тесты на компонент CandidateCard Кандидат с профессиями >= 2 1`] = `
<div
  className="BoardCard CandidateCard"
>
  <a
    className="Link BoardCard-Link"
    href="/candidates/1/"
    target="_blank"
  >
    <div
      className="BoardCard-Row"
    >
      <div
        className="BoardCard-RowItem BoardCard-RowItem_isHeading"
      >
        <div
          className="CandidateName CandidateCard-Name"
        >
          <a
            className="Link Link_theme_black CandidateName-Name"
            href="/candidates/1/"
            target="_blank"
          >
            Ольга Козлова
          </a>
           
        </div>
      </div>
      <div
        className="BoardCard-RowItem"
      >
        <span
          className="Id Id_theme_ghost CandidateCard-Id"
        >
          CAN 
          1
        </span>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    >
      Статус изменён
       
      <span
        className="DisplayDate"
        title="13 сентября 2018, 13:26"
      >
        13 сентября 2018
      </span>
    </div>
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    >
      <div
        className="ListShorter CandidateCard-Professions"
      >
        <div
          className="ListShorter-List ListShorter-List_size_m"
        >
          <span
            className="ListShorter-ListItem"
          >
            Разработчик бекэнда
          </span>
          <span
            className="ListShorter-Hidden ListShorter-Hidden_placeMoreOnNewLine"
          >
            <span
              className="ListShorter-ListMore"
              title="Разработчик фронтенда"
            >
              ещё +1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    />
  </a>
</div>
`;

exports[`Jest snapshot тесты на компонент CandidateCard Кандидат с прочими видами интервью 1`] = `
<div
  className="BoardCard CandidateCard"
>
  <a
    className="Link BoardCard-Link"
    href="/candidates/1/"
    target="_blank"
  >
    <div
      className="BoardCard-Row"
    >
      <div
        className="BoardCard-RowItem BoardCard-RowItem_isHeading"
      >
        <div
          className="CandidateName CandidateCard-Name"
        >
          <a
            className="Link Link_theme_black CandidateName-Name"
            href="/candidates/1/"
            target="_blank"
          >
            Ольга Козлова
          </a>
           
        </div>
      </div>
      <div
        className="BoardCard-RowItem"
      >
        <span
          className="Id Id_theme_ghost CandidateCard-Id"
        >
          CAN 
          1
        </span>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    >
      Статус изменён
       
      <span
        className="DisplayDate"
        title="23 апреля 2021, 20:42"
      >
        23 апреля 2021
      </span>
    </div>
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="CardInterviewsInfo"
    >
      <div
        className="CardInterviewsInfo-InterviewStat"
        title=""
      >
        <div
          className="InterviewType CardInterviewsInfo-InterviewType"
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_hr"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_rejected"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_no InterviewGrade-Icon InterviewGrade-Icon_result_rejected"
            style={Object {}}
          />
        </div>
      </div>
      <div
        className="CardInterviewsInfo-InterviewStat"
        title="Назначено 3 skype секции"
      >
        <div
          className="InterviewType CardInterviewsInfo-InterviewType"
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_video"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_unknown"
          title="Секция не завершена"
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_help InterviewGrade-Icon InterviewGrade-Icon_result_unknown"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_rejected"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_no InterviewGrade-Icon InterviewGrade-Icon_result_rejected"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_hired"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_three InterviewGrade-Icon InterviewGrade-Icon_result_hired"
            style={Object {}}
          />
        </div>
      </div>
      <div
        className="CardInterviewsInfo-InterviewStat"
        title="Назначено 3 секции с кодом"
      >
        <div
          className="InterviewType CardInterviewsInfo-InterviewType"
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_code"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_rejected"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_no InterviewGrade-Icon InterviewGrade-Icon_result_rejected"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_unknown"
          title="Секция не завершена"
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_help InterviewGrade-Icon InterviewGrade-Icon_result_unknown"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_hired"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_two InterviewGrade-Icon InterviewGrade-Icon_result_hired"
            style={Object {}}
          />
        </div>
      </div>
      <div
        className="CardInterviewsInfo-InterviewStat"
        title="Назначено 3 AA секции"
      >
        <div
          className="InterviewType CardInterviewsInfo-InterviewType"
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_aa"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_rejected"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_no InterviewGrade-Icon InterviewGrade-Icon_result_rejected"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_unknown"
          title="Секция не завершена"
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_help InterviewGrade-Icon InterviewGrade-Icon_result_unknown"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_hired"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_four InterviewGrade-Icon InterviewGrade-Icon_result_hired"
            style={Object {}}
          />
        </div>
      </div>
      <div
        className="CardInterviewsInfo-InterviewStat"
        title="Назначено 3 финальные секции"
      >
        <div
          className="InterviewType CardInterviewsInfo-InterviewType"
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_final"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_unknown"
          title="Секция не завершена"
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_help InterviewGrade-Icon InterviewGrade-Icon_result_unknown"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_hired"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_tick InterviewGrade-Icon InterviewGrade-Icon_result_hired"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_rejected"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_no InterviewGrade-Icon InterviewGrade-Icon_result_rejected"
            style={Object {}}
          />
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Jest snapshot тесты на компонент CandidateCard Кандидат только со скринингами 1`] = `
<div
  className="BoardCard CandidateCard"
>
  <a
    className="Link BoardCard-Link"
    href="/candidates/1/"
    target="_blank"
  >
    <div
      className="BoardCard-Row"
    >
      <div
        className="BoardCard-RowItem BoardCard-RowItem_isHeading"
      >
        <div
          className="CandidateName CandidateCard-Name"
        >
          <a
            className="Link Link_theme_black CandidateName-Name"
            href="/candidates/1/"
            target="_blank"
          >
            Ольга Козлова
          </a>
           
        </div>
      </div>
      <div
        className="BoardCard-RowItem"
      >
        <span
          className="Id Id_theme_ghost CandidateCard-Id"
        >
          CAN 
          1
        </span>
      </div>
    </div>
    <div
      className="BoardCard-Row"
    >
      Статус изменён
       
      <span
        className="DisplayDate"
        title="23 апреля 2021, 20:42"
      >
        23 апреля 2021
      </span>
    </div>
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="BoardCard-Row"
    />
    <div
      className="CardInterviewsInfo"
    >
      <div
        className="CardInterviewsInfo-InterviewStat"
        title=""
      >
        <div
          className="InterviewType CardInterviewsInfo-InterviewType"
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_hr"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_hired"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_tick InterviewGrade-Icon InterviewGrade-Icon_result_hired"
            style={Object {}}
          />
        </div>
        <div
          className="InterviewGrade InterviewGrade_result_rejected"
          title=""
        >
          <span
            aria-hidden={true}
            className="Icon Icon_size_s Icon_type_no InterviewGrade-Icon InterviewGrade-Icon_result_rejected"
            style={Object {}}
          />
        </div>
      </div>
    </div>
  </a>
</div>
`;
